# muscleapi

./: .gitignore  README.md  main.py  pyproject.toml  run_dev.sh  run_server.py  setup.cfg  template.yaml
src/: domain.py  events.py  exceptions.py  models.py  presentation.py  protocols.py  repository.py  service.py  storage.py
src/domain/: helpers.py  reducers.py  state.py  types.py
src/service/: logging.py  plan_management.py  prescription.py
test/: conftest.py  test_domain_models.py  test_logging.py  test_prescription.py  test_storage.py  test_template_management.py
test/domain/: test_helpers.py  test_reducers.py  test_state.py
test/service/: test_logging.py
web/api/: main.py
web/frontend/: package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1761070285496-cabc3a036cf16.mjs
web/frontend/src/: app.css  app.html
web/frontend/src/lib/components/: ExerciseCard.svelte  FeedbackModal.svelte
web/frontend/src/routes/: +layout.svelte  +page.svelte
