[project]
name = "muscleapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "returns>=0.26.0",
    "thefuzz>=0.22.1",
    "toolz>=1.0.0",
    "typer>=0.19.2",
    "wemake-python-styleguide>=1.4.0",
    # FastAPI backend dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.black]
line-length = 79

[tool.pytest]
addopts = "-vv"
